# abridge-hackathon

./: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  .gitignore  pyproject.toml
apps/api/app/: checklist.py  config.py  db.py  ehr.py  ingest.py  main.py  models.py  reasoning.py  schemas.py  sdoh.py  seed.py  storage.py  transcription.py
apps/api/app/data/: admissions.json
apps/api/scripts/: build_admissions.py
apps/mobile/: App.tsx  app.json  metro.config.js  package.json
apps/mobile/src/: api.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  index.css
food-assist/: README.md
food-assist/schema/: 002_food_assistance.sql
food-assist/seeds/: food_programs.csv  insurance_meal_benefits.csv
med-assist/: README.md
med-assist/schema/: 001_medication_assistance.sql
med-assist/seeds/: assistance_programs.csv  cash_prices.csv  medication_programs.csv  medications.csv
