[project]
name = "abridge-api"
version = "0.0.0"
description = "Abridge hackathon FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "groq>=0.11.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
